# streetTransformer

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
dashboard/: app.py  config.py  setup.py
dashboard/assets/: custom.css
dashboard/callbacks/: compare_callbacks.py  timeline_callbacks.py  utils.py
dashboard/layout/: comparison_tab.py  tabs.py  timeline_tab.py
dashboard/mockup2/: street_transformations_ui.html
dashboard/v0/: app.py  setup.py
dashboard/v1/: app.py  app0.py  setup.py
dashboard2/: setup.py
dashboard2/callbacks/: detail.py
dashboard2/layout/: layout_main_view.py
notebooks/: LION.ipynb  LLM_API_testing.ipynb  _final_validation_metrics.ipynb  build_ground_truth.ipynb  caprecon_projects.ipynb  copy_and_add_additional_control.ipynb  db_schema.ipynb  file_migration_templating.py  imagery_cut_and_stitch.ipynb  imagery_cut_and_stitch2.ipynb  oai_api.ipynb  project_data.ipynb  project_data_changes.ipynb  pull_project_documents.ipynb
notebooks/data_architecture_and_migrations/: copy_and_add_additional_control.ipynb  copy_and_downsample_universe.ipynb  db_schema.ipynb  fix_buffer_dwithin_joins_for_relational_tables.ipynb
notebooks/llm_testing/: oai_api.ipynb
notebooks/sampling/: ground_truth.ipynb  sample_locations_to_documents.ipynb
notebooks/validating_and_mertrics/: _final_validation_metrics.ipynb  validate_oai_output.ipynb
preprocessing/: README.md  config.py  load_lion.py  location.py  preprocess.py
preprocessing/citydata/: cap_recon_pipeline.py  features_pipeline.py
preprocessing/data_load/: load_intersections.py  load_lion.py
preprocessing/documents/: align_doc_geocodes.py  align_docs_and_projects.py  digest_and_geocode.py  document_title_similarity_match.ipynb  gemini_geocode.py  geocode.py  geocode_crossstreets_to_census_API.py  scrape.py  title_match.py
preprocessing/imagery/: download_imagery2.py  join_and_stitch.py  stitch.py
preprocessing/st_preprocessing/: config.py  preprocess.py
scripts/: _run_all_oai_models.py  benchmark_batch.py  benchmark_pipeline.py  change_identifier_test.py  combine_two_universes.py  data_extraction_pipline.py  gather_caprecon_images.py  get_cropped_tilegrid_bounds.py  test_compare_models.py  test_identify_changes.py
scripts/migrations/: copy_and_add_additional_control.py  write_joined_locations_to_file.py
scripts/universe_pulls/: gather_caprecon_images.py  pull_images.py
scripts/utils/: count_pdf_pages.py  map_directory.py
src/: todo
src/data_load/: load_lion.py  (+1 more)
(+111 files in other folders)
