[project]
name = "nyc-street-design-adherence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.1.1",
    "dash-bootstrap-components>=2.0.3",
    "dash-extensions>=2.0.4",
    "dash-html-components>=2.0.0",
    "dotenv>=0.9.9",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.3",
    "ollama>=0.5.1",
    "osmnx>=2.0.5",
    "pandas>=2.3.1",
    "ruff>=0.12.3",
    "shapely>=2.1.1",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "bs4>=0.0.2",
    "folium>=0.20.0",
    "torch>=2.7.1",
]
