[project]
name = "streettransformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.1.1",
    "dash-bootstrap-components>=2.0.3",
    "dash-extensions>=2.0.4",
    "dash-html-components>=2.0.0",
    "dash-leaflet>=1.1.3",
    "dotenv>=0.9.9",
    "fitz>=0.0.1.dev2",
    "geoalchemy2>=0.18.0",
    "geopandas>=1.1.1",
    "google-genai>=1.31.0",
    "matplotlib>=3.10.3",
    "mercantile>=1.2.1",
    "ollama>=0.5.1",
    "osmnx>=2.0.5",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pytesseract>=0.3.13",
    "ruff>=0.12.3",
    "shapely>=2.1.1",
    "sqlalchemy>=2.0.43",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ace-tools>=0.0",
    "bs4>=0.0.2",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "ipykernel>=6.30.0",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
]
[tool.setuptools]
include-package-data = true
[tool.setuptools.packages.find]
where = ["src", "preprocessing"] 
